@@ -3,58 +3,56 @@
 Note: I expect these instructions to change after Jason 'dockerizes' us. Because of this I won't be getting too
 specific on versions of some things, if I expect it not to matter.
 
-Install JRuby 9.2.6 on your system:
+Download and install JRuby 9.2.8 on your system:
 
-https://www.jruby.org/2019/02/11/jruby-9-2-6-0.html
+https://www.jruby.org/download
 
-Download jruby's jar file:
+Download jruby complete jar file and put it in the jruby root directory:
 
-https://repo1.maven.org/maven2/org/jruby/jruby-complete/9.2.6.0/jruby-complete-9.2.6.0.jar
+https://www.jruby.org/download
 
-I put mine here:
 ```bazaar
-cshupp@MSI C:\languages\ruby\jruby-9.2.6.0
-$ ls -la
-total 25857
-drwxr-xr-x 1 cshupp 197121        0 Mar 13 08:34 .
-drwxr-xr-x 1 cshupp 197121        0 Mar 13 08:33 ..
-drwxr-xr-x 1 cshupp 197121        0 Mar 13 08:33 .install4j
--rw-r--r-- 1 cshupp 197121     1282 Feb 11 15:32 BSDL
--rw-r--r-- 1 cshupp 197121   132268 Feb 11 15:32 COPYING
--rw-r--r-- 1 cshupp 197121      218 Feb 11 15:32 LEGAL
--rw-r--r-- 1 cshupp 197121     2581 Feb 11 15:32 LICENSE.RUBY
-drwxr-xr-x 1 cshupp 197121        0 Mar 13 08:33 bin
--rwxr-xr-x 1 cshupp 197121   268800 Feb 11 15:32 irb.exe
--rw-r--r-- 1 cshupp 197121 25332370 Mar 13 08:27 jruby-complete-9.2.6.0.jar
-drwxr-xr-x 1 cshupp 197121        0 Mar 13 08:33 lib
-drwxr-xr-x 1 cshupp 197121        0 Mar 13 08:33 samples
-drwxr-xr-x 1 cshupp 197121        0 Feb 11 15:32 tool
--rwxr-xr-x 1 cshupp 197121   715776 Feb 11 15:32 uninstall.exe
+gbowman@MSI c:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0                    
+$ ls -la                                                                     
+total 25625                                                                  
+drwxr-xr-x 1 gbowman 197121        0 Aug 19 15:37 .                          
+drwxr-xr-x 1 gbowman 197121        0 Aug 19 15:35 ..                         
+-rw-r--r-- 1 gbowman 197121     1282 Aug 12 10:19 BSDL                       
+-rw-r--r-- 1 gbowman 197121   131622 Aug 12 10:19 COPYING                    
+-rw-r--r-- 1 gbowman 197121      218 Aug 12 10:19 LEGAL                      
+-rw-r--r-- 1 gbowman 197121     2581 Aug 12 10:19 LICENSE.RUBY               
+drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 bin                        
+-rw-r--r-- 1 gbowman 197121 26083456 Aug 19 15:31 jruby-complete-9.2.8.0.jar 
+drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 lib                        
+drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 samples                    
+drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 tool                       
 ```
 
 Make yourself a bat/bash file and make the obvious changes (This is mine):
 ```bazaar
-set JRUBY_OPTS=-J-Xmx2g -J-Djava.awt.headless=true 
+set JRUBY_OPTS=--dev -J-Xmx2g -J-Djava.awt.headless=true -J-Dcatalina.base=./logs/java_logs -J-Djava.net.preferIPv4Stack=true
 set GEM_HOME=C:\work\digital_services_bpa\gem_home
-set JRUBY_HOME=C:\languages\ruby\jruby-9.2.6.0
-set JRUBY_JAR=%JRUBY_HOME%\jruby-complete-9.2.6.0.jar
-set JAVA_HOME=C:\languages\Java\jdk1.8_191
+set JRUBY_HOME=C:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0
+set JRUBY_JAR=C:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0\jruby-complete-9.2.8.0.jar
+set JAVA_HOME=C:\languages\Java\jdk-11.0.4
 set PATH=%GEM_HOME%\bin;%JRUBY_HOME%\bin;%JAVA_HOME%\bin;.\bin;%PATH%;
+set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/java.io=org.jruby.dist
+set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/java.nio.channels=org.jruby.dist
+set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/sun.nio.ch=org.jruby.dist
+set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/sun.nio.ch=org.jruby.core
+set JAVA_OPTS=%JAVA_OPTS% --add-opens java.logging/java.util.logging=org.jruby.dist
 ```
 
 You will run your bat or source your bash.
 
-Install a full JDK.  I am using the latest Java 8.
-Install Maven. The latest should be fine.
-Install Yarn and Node. The latest should be fine.
+Install Java 11 JDK.
+https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html
 
-#todo
-document build for javascript (maven will do it for us for the war)
+Install Maven, Yarn and Node. The latest should be fine.
 
-Run Gem install bundler.
-
+At a terminal run in the project root run the following:
 ```bazaar
-gem install bundler
+gem install bundler.
 ```
 
 From rails root do a (For the full build maven will do this):
@@ -62,16 +60,10 @@ From rails root do a (For the full build maven will do this):
 bundle install
 ```
 
-Run the following:
+Run the following at rails root:
 ```
 yarn install
 ```
-
-Also install (this is not in the gemfile as it is not needed for the build, but you need it to run outside Tomcat.):
-```bazaar
-gem install trinidad --pre
-```
-
 
 Setup your database.  We will use postgres, so install that on your system.
 Create a user: 
@@ -109,21 +101,27 @@ Running shows:
 $ startup.bat
 
 @ C:\work\digital_services_bpa\dsbpa
-$ C:\languages\Java\jdk1.8_191\bin\java  -server  -jar C:\languages\ruby\jruby-9.2.6.0\jruby-complete-9.2.6.0.jar C:\work\digital_services_bpa\gem_home\bin\trinidad
+$ C:\languages\Java\jdk-11.0.4\bin\java  -server  -jar C:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0\jruby-complete-9.2.8.0.jar C:\work\digital_services_bpa\gem_home\bin\trinidad
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.jruby.runtime.encoding.EncodingService (file:/C:/languages/jruby/jruby9.2.8.0/jruby-9.2.8.0/jruby-complete-9.2.8.0.jar) to field java.io.Console.cs
+WARNING: Please consider reporting this to the maintainers of org.jruby.runtime.encoding.EncodingService
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
 Deploying from C:/work/digital_services_bpa/dsbpa as /dsbpa
 Initializing ProtocolHandler ["http-bio-0.0.0.0-3000"]
-jruby 9.2.6.0 (2.5.3) 2019-02-11 15ba00b Java HotSpot(TM) 64-Bit Server VM 25.191-b12 on 1.8.0_191-b12 +jit [mswin32-x86_64]
+Unknown loader jdk.internal.loader.ClassLoaders$AppClassLoader@2cdf8d8a class jdk.internal.loader.ClassLoaders$AppClassLoader
+jruby 9.2.8.0 (2.5.3) 2019-08-12 a1ac7ff Java HotSpot(TM) 64-Bit Server VM 11.0.4+10-LTS on 11.0.4+10-LTS +jit [mswin32-x86_64]
 using a shared (threadsafe!) runtime
 uri:classloader:/jruby/rack/response.rb:294: warning: constant ::Fixnum is deprecated
 uri:classloader:/jruby/rack/core_ext.rb:26: warning: constant ::NativeException is deprecated
 Starting ProtocolHandler ["http-bio-0.0.0.0-3000"]
 
 ```
-When you see 'Starting ProtocolHandler' it is listening.
+When you see 'Starting ProtocolHandler' it is listening. Do not worry about the warnings.
 
 Try:
 
-http://localhost:3000/dsbpa/comments
+http://localhost:3000/dsbpa
 
 To build a war:
 
